# PassVault

./: .gitignore  README.md  package-lock.json  package.json
public/: index.html  manifest.json
src/: App.js  App.tsx  index.css  index.tsx  reportWebVitals.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/general/components/generate-password/: generate-password.css  generate-password.js  generate-password.tsx
src/general/components/invalid-password-dialog/: invalid-password-dialog.css  invalid-password-dialog.js  invalid-password-dialog.tsx
src/general/components/logo/: logo.tsx
src/general/components/message-dialog/: message-dialog.css  message-dialog.tsx
src/general/components/titlebar/: titlebar.css  titlebar.tsx
src/general/utils/: commands.ts  generatePassword.js  generatePassword.ts  index.js  index.ts  toolTipUtils.ts
src/pages/home/: home.css  home.js  home.tsx  home1.css  home1.tsx
src/pages/home/components/auth/: auth.css  auth.js  auth.tsx
src/pages/home/components/create-dialog/: create-dialog.css  create-dialog.js  create-dialog.tsx
src/pages/home/components/delete-dialog/: delete-dialog.css  delete-dialog.js  delete-dialog.tsx
src/pages/home/components/edit-dialog/: edit-dialog.css  edit-dialog.js  edit-dialog.tsx
src/pages/home/state/: homeSlice.js
src/pages/login/: login.css  login.js  login.tsx  login1.css  login1.tsx
src/pages/settings/: settings-1.css  settings.css  settings.js  settings.tsx
src/state/: loginSlice.js  loginSlice.ts  store.js  store.ts
(+10 files in other folders)
