[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = {version = "1.0"}
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
chrono = "0.4"
lazy_static = "1.4"
bcrypt = "0.15.0"
aes = "0.8.3"
rand = "0.8.5"
sha2 = "0.10"
cbc = "0.1"
argon2 = "0.5.1"
hex-literal = "0.4.1"
typenum = "1.16.0"
hex = "0.4.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
